# gnome-sms

./: NEWS  README.md  autogen.sh  configure.ac  include.mk
po/: POTFILES.in  es.po  gnome-sms.pot
src/: Makefile.am  extension.js  helper.vala  metadata.json  metadata.json.in  org.gnome.shell.extensions.sms.gschema.xml.in  stylesheet.css
